--- a/core/Makefile
+++ b/core/Makefile
@@ -4,8 +4,8 @@
 CC = gcc
 
 # the c compiler flags
-CFLAGS = -Wall -pedantic -Werror -Wextra -Wdeclaration-after-statement \
-	 -std=gnu2x -I../interpreter
+CFLAGS = -I../interpreter -Ifilesystem -pedantic -std=gnu2x -Wall \
+	 -Wdeclaration-after-statement -Werror -Wextra
 
 LIBS = -lpanel -lncurses
 
@@ -23,13 +23,14 @@ array.o: array.c array.h
 exit.o: exit.c exit.h
 	$(CC) $(CFLAGS) -c $< -o $@
 
-keyboard.o: keyboard.c array.h exit.h keyboard.h window.h
+keyboard.o: keyboard.c array.h exit.h keyboard.h keymapper.h window.h
 	$(CC) $(CFLAGS) -c $< -o $@
 
 logo.o: logo.c logo.h
 	$(CC) $(CFLAGS) -c $< -o $@
 
-stogram.o: stogram.c ../interpreter/shell.h exit.h logo.h stogram.h window.h
+stogram.o: stogram.c ../interpreter/shell.h exit.h logo.h stogram.h \
+	   filesystem/syspath.h window.h
 	$(CC) $(CFLAGS) -c $< -o $@
 
 window.o: window.c window.h
