added a rule to not push any swap files

--- a/.gitignore
+++ b/.gitignore
@@ -35,7 +35,7 @@
 *.i*86
 *.x86_64
 *.hex
-core/stogram
+stogram
 
 # Debug files
 *.dSYM/
@@ -51,3 +51,6 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+# Swap files
+*.swp
