--- a/interpreter/Makefile
+++ b/interpreter/Makefile
@@ -11,18 +11,20 @@ CFLAGS = -I../core -I../core/filesystem -pedantic -std=gnu2x -Wall \
 LIBS = -lpanel -lncurses
 
 # object files
-OBJS = convert_to_hex.o parser.o shell.o
+OBJS = convert.o parser.o shell.o
 
 all: $(OBJS)
 
-convert_to_hex.o: convert_to_hex.c ../core/error.h ../core/exit.h \
-		  ../core/stogram.h convert_to_hex.h
+convert.o: convert.c ../core/error.h ../core/exit.h \
+		  ../core/externs.h ../core/stogram.h convert.h
 	$(CC) $(CFLAGS) -c $< -o $@
 
-parser.o: parser.c ../core/exit.h ../core/exit.h ../core/stogram.h parser.h
+parser.o: parser.c ../core/exit.h ../core/exit.h ../core/externs.h \
+	  ../core/stogram.h parser.h
 	$(CC) $(CFLAGS) -c $< -o $@
 
-shell.o: shell.c ../core/exit.h ../core/filesystem/executables.h \
+shell.o: shell.c ../core/exit.h ../core/externs.h \
+	 ../core/filesystem/executables.h \
 	 ../core/keyboard.h ../core/stogram.h parser.h shell.h
 	$(CC) $(CFLAGS) -c $< -o $@
 
