--- a/core/sys/Makefile
+++ b/core/sys/Makefile
@@ -4,39 +4,27 @@
 CC = gcc
 
 # the c compiler flags
-CFLAGS = -I.. -I../../interpreter -pedantic -std=gnu2x -Wall \
-	 -Wdeclaration-after-statement -Werror -Wextra
+CFLAGS = -pedantic -std=gnu2x -Wall -Wdeclaration-after-statement -Werror \
+	 -Wextra
 
 # object files
-OBJS = changedir.o executables.o listdir.o syspath.o
+OBJS = syspath.o
 
-TARGET = ../core/stogram
+TARGET = ../launch/run
 
 all: $(OBJS)
-
-changedir.o: changedir.c ../array.h ../externs.h changedir.h syspath.h
-	$(CC) $(CFLAGS) -c $< -o $@
-
-executables.o: executables.c ../externs.h ../../interpreter/convert.h \
-	       changedir.h executables.h listdir.h syspath.h
-	$(CC) $(CFLAGS) -c $< -o $@
-
-listdir.o: listdir.c ../externs.h listdir.h
-	$(CC) $(CFLAGS) -c $< -o $@
 
 syspath.o: syspath.c syspath.h
 	$(CC) $(CFLAGS) -c $< -o $@
 
-.PHONY: clean clean-all mem-check run
+.PHONY: clean clean-all run
 
-mem-check:
-	@-valgrind --leak-check=full --track-origins=yes \
-	--show-leak-kinds=all $(TARGET)
 run:
-	@./$(TARGET)
+	@-valgrind --leak-check=full --track-origins=yes \
+	--show-leak-kinds=all ./$(TARGET)
 
 clean:
 	@-rm -f $(OBJS)
 
 clean-all:
-	@-rm -f *.o
+	@-rm -f *.o ./$(TARGET)
