resolved memory leakages, betty compliance, and segmentation faults. Codes looks clean

--- a/core/Makefile
+++ b/core/Makefile
@@ -22,14 +22,20 @@ child.o: child.c child.h pcb.h
 fdt.o: fdt.c fdt.h
 	$(CC) $(CFLAGS) -c $< -o $@
 
-pcb.o: pcb.c child.h indicator.h pcb.h
+pcb.o: pcb.c child.h fdt.h fdtp.h indicator.h pcb.h
 	$(CC) $(CFLAGS) -c $< -o $@
 
 skernel.o: skernel.c fdt.h indicator.h pcb.h skernel.h
 	$(CC) $(CFLAGS) -c $< -o $@
 
-.PHONY: clean clean-all
+.PHONY: clean clean-all test
 
+test: tests/test.c
+	@$(CC) $< $(OBJS) -o $@
+	@valgrind --leak-check=full --track-origins=yes --show-leak-kinds=all \
+	./$@
+	@./$@
+	@echo "\nOK"
 clean:
 	@-rm -f $(OBJS)
 
