added a rule to clean/uninstall the smachine and residuals

--- a/vm/Makefile
+++ b/vm/Makefile
@@ -33,3 +33,10 @@ $(SUDOERS): sudoers.sh
 	echo $(shell ./sudoers.sh) > $@
 	chmod 0440 $@
 	visudo -c
+
+.PHONY: clean
+
+clean:
+	sudo rm $(UNIT)
+	sudo rm $(SUDOERS)
+	sudo rm $(TARGET)
